# ROSProxy

./: CMakeLists.txt
cmake/: ROSProxy.cmake
launch/: pgr_camera.launch
src/: CMakeLists.txt  ROSProxyConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/CameraSubscriber/: CMakeLists.txt  CameraSubscriber.cpp  CameraSubscriber.hpp
src/Components/IntProxy/: CMakeLists.txt
src/Components/KinectSubscriber/: .KinectSubscriber.cpp.swp  .KinectSubscriber.hpp.swp  CMakeLists.txt  KinectSubscriber.cpp  KinectSubscriber.hpp
tasks/: CameraViewer.xml
